--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d992b2">  <td>18/04/10 12:54:13</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase10.setUp()[pri:0, instance:selenium_Advance_video.Web_Event_Listener_InSelenium_Video1_2_10p.TestEventListener@6a41eaa2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1776957250</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>18/04/10 12:54:22</td>   <td>8226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestEventListener.testEventListener()[pri:0, instance:selenium_Advance_video.Web_Event_Listener_InSelenium_Video1_2_10p.TestEventListener@6a41eaa2]">testEventListener</td> 
-  <td>main@1776957250</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/04/13 13:34:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Annotations.afterClass()[pri:0, instance:testNG_Concepts_For_Selenium_1.testNG.Annotations@1e88b3c]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/04/13 13:34:34</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Annotations.afterMethod()[pri:0, instance:testNG_Concepts_For_Selenium_1.testNG.Annotations@1e88b3c]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/04/13 13:34:34</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Annotations.afterMethod()[pri:0, instance:testNG_Concepts_For_Selenium_1.testNG.Annotations@1e88b3c]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/04/13 13:34:34</td>   <td>76</td> <td title="&lt;&lt;Annotations.afterSuite()[pri:0, instance:testNG_Concepts_For_Selenium_1.testNG.Annotations@1e88b3c]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/04/13 13:34:34</td>   <td>2</td> <td>&nbsp;</td><td title="&lt;&lt;Annotations.afterTest()[pri:0, instance:testNG_Concepts_For_Selenium_1.testNG.Annotations@1e88b3c]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/04/13 13:34:34</td>   <td>-33</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Annotations.beforeClass()[pri:0, instance:testNG_Concepts_For_Selenium_1.testNG.Annotations@1e88b3c]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/04/13 13:34:34</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Annotations.beforeMethod()[pri:0, instance:testNG_Concepts_For_Selenium_1.testNG.Annotations@1e88b3c]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/04/13 13:34:34</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Annotations.beforeMethod()[pri:0, instance:testNG_Concepts_For_Selenium_1.testNG.Annotations@1e88b3c]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/04/13 13:34:34</td>   <td>-42</td> <td>&nbsp;</td><td title="&gt;&gt;Annotations.beforeTest()[pri:0, instance:testNG_Concepts_For_Selenium_1.testNG.Annotations@1e88b3c]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/04/13 13:34:34</td>   <td>-80</td> <td title="&gt;&gt;Annotations.beforesuite()[pri:0, instance:testNG_Concepts_For_Selenium_1.testNG.Annotations@1e88b3c]">&gt;&gt;beforesuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/04/13 13:34:34</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Annotations.test1()[pri:0, instance:testNG_Concepts_For_Selenium_1.testNG.Annotations@1e88b3c]">test1</td> 
+  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/04/13 13:34:34</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Annotations.test2()[pri:0, instance:testNG_Concepts_For_Selenium_1.testNG.Annotations@1e88b3c]">test2</td> 
+  <td>main@1926764753</td>   <td></td> </tr>
 </table>
