--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,45 +4,33 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testNG_Concepts_For_Selenium_1.testNG.Annotations</td>
+<td>naveenAutomoation_final.AutoIT_FileUpload_MukeshOtwani_1</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test2</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test1</td>
+<td>fileUpload</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>beforeClass</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>beforeMethod</td>
+<td>setUp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterMethod</td>
+<td>tearDown</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterClass</td>
-<td>&nbsp;</td></tr>
 </table>
