selenium basics --chrome update

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">59,860</td><td></td><td></td></tr>
+<tr><th colspan="7">Listener Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">120,092</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">selenium_Scripting_3.Edit_Lead_Information_in_V_tiger_7</td><td><a href="#m0">testEditData</a></td><td rowspan="1">1527760240572</td><td rowspan="1">59834</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Listener Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">selenium_Basics_4.custom_Listener_InSelenium_19_TestCustomListener.Login</td><td><a href="#m0">testLogin</a></td><td rowspan="1">1527842278085</td><td rowspan="1">65691</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">selenium_Scripting_3.Edit_Lead_Information_in_V_tiger_7#testEditData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">selenium_Basics_4.custom_Listener_InSelenium_19_TestCustomListener.Login#testLogin</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Test Started:-testLogin<br/><a href='E:\Selenium\Selenium_Job\Bhanu_Selenium_Basics\src\main\java\screenShots\Test_success\testLogin_01_06_2018_02_09_03.png'> <img src='E:\Selenium\Selenium_Job\Bhanu_Selenium_Basics\src\main\java\screenShots\Test_success\testLogin_01_06_2018_02_09_03.png' width='100' height='100'/></a></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
