--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90c9c3">  <td>18/05/31 15:20:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Edit_Lead_Information_in_V_tiger_7.testEditData()[pri:0, instance:selenium_Scripting_3.Edit_Lead_Information_in_V_tiger_7@26653222]">testEditData</td> 
-  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>18/06/01 13:18:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:selenium_Basics_4.properties_file_in_selenium_18.propertyFiles.Login@27efef64]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>18/06/01 13:18:16</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.testLogin()[pri:0, instance:selenium_Basics_4.properties_file_in_selenium_18.propertyFiles.Login@27efef64]">testLogin</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
 </table>
